change UNI name

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <ul>
         <li>St.Xavier's School</li>
         <li>Bidhan Chandra Institution</li>
-        <li><a href="https://kiit.ac.in/">Kalinga Institute of Technology</a></li>
+        <li><a href="https://kiit.ac.in/">Kalinga Institute of Industrial Technology</a></li>
     </ul>
     <hr size="3" noshade="">
     <h3>My Hobbies</h3>
